# devlog-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
devlog/: cli.py  requirements.txt
tests/: test_cli.py
